[gd_scene load_steps=8 format=3 uid="uid://bti3t0uamplla"]

[ext_resource type="Script" uid="uid://b6mt0hmrgf070" path="res://scripts/stops/bus_stop.gd" id="1_6ul46"]
[ext_resource type="Texture2D" uid="uid://r7oatlfq20aa" path="res://assets/bus_stop/1x/Background.png" id="2_5r4f1"]
[ext_resource type="PackedScene" uid="uid://4ngfelrrcq6c" path="res://scenes/player/character_player.tscn" id="3_8fvjs"]
[ext_resource type="Texture2D" uid="uid://ckysdxcviwrv7" path="res://assets/bus_stop/1x/tree.png" id="3_y5pks"]
[ext_resource type="Texture2D" uid="uid://ddxk0qsjdwsrs" path="res://assets/bus_stop/1x/bus_stop_object.png" id="4_avr11"]
[ext_resource type="Texture2D" uid="uid://b15uk31mfb132" path="res://assets/bus_stop/1x/yellow_stop.png" id="6_tcfs5"]

[sub_resource type="LabelSettings" id="LabelSettings_6ul46"]
font_size = 30

[node name="BusStop" type="Node2D"]
script = ExtResource("1_6ul46")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(972.635, 538.861)
texture = ExtResource("2_5r4f1")

[node name="Tree5" type="Sprite2D" parent="."]
position = Vector2(859, 149)
texture = ExtResource("3_y5pks")

[node name="Tree3" type="Sprite2D" parent="."]
position = Vector2(192, 177)
texture = ExtResource("3_y5pks")

[node name="Tree4" type="Sprite2D" parent="."]
position = Vector2(1292, 214)
texture = ExtResource("3_y5pks")

[node name="Tree" type="Sprite2D" parent="."]
position = Vector2(1631, 188)
texture = ExtResource("3_y5pks")

[node name="Tree2" type="Sprite2D" parent="."]
position = Vector2(513, 235)
texture = ExtResource("3_y5pks")

[node name="BusStop" type="Sprite2D" parent="."]
position = Vector2(892, 465)
texture = ExtResource("4_avr11")

[node name="StopNameLabel" type="Label" parent="BusStop"]
offset_left = -33.0
offset_top = -269.0
offset_right = 153.0
offset_bottom = -246.0
text = "No Stop Set"

[node name="NeighborhoodLabel" type="Label" parent="BusStop"]
offset_left = -34.0
offset_top = -242.0
offset_right = 148.0
offset_bottom = -219.0

[node name="CharacterPlayer" parent="." instance=ExtResource("3_8fvjs")]
position = Vector2(906, 786)

[node name="BusSpawnPosition" type="Marker2D" parent="."]
position = Vector2(2467, 601)

[node name="BusDespawnPosition" type="Marker2D" parent="."]
position = Vector2(-730, 612)

[node name="BusStopPosition" type="Marker2D" parent="."]
position = Vector2(954, 606)

[node name="BusSpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BoardingWindowTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DirectionLabel" type="Label" parent="."]
z_index = 100
offset_right = 432.0
offset_bottom = 84.0
text = "Towards: End of Line
"
label_settings = SubResource("LabelSettings_6ul46")

[node name="DirectionButton" type="Button" parent="."]
z_index = 100
offset_left = 22.0
offset_top = 968.0
offset_right = 187.0
offset_bottom = 1009.0
text = "Change direction"

[node name="BusStopAudio" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="YellowStop" type="Sprite2D" parent="."]
position = Vector2(1423, 357)
texture = ExtResource("6_tcfs5")

[connection signal="timeout" from="BusSpawnTimer" to="." method="_on_bus_spawn_timer_timeout"]
[connection signal="timeout" from="BoardingWindowTimer" to="." method="_on_boarding_window_timer_timeout"]
